--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,8 @@ steps:
 - name: test
   image: golang:1.14.15
   commands:
+  - export GO111MODULE=on 
+  - export GOPROXY=https://goproxy.cn
   - go test ./...
   
 - name: build
