--- a/.drone.yml
+++ b/.drone.yml
@@ -1,43 +1,43 @@
----
-kind: pipeline
-type: docker
-name: linux-amd64
+# ---
+# kind: pipeline
+# type: docker
+# name: linux-amd64
 
-platform:
-  arch: amd64
-  os: linux
+# platform:
+#   arch: amd64
+#   os: linux
 
-steps:
-- name: test
-  image: golang:1.14.15
-  commands:
-  - export GO111MODULE=on 
-  - export GOPROXY=https://goproxy.cn
-  - go test ./...
+# steps:
+# - name: test
+#   image: golang:1.14.15
+#   commands:
+#   - export GO111MODULE=on 
+#   - export GOPROXY=https://goproxy.cn
+#   - go test ./...
   
-- name: build
-  image: golang:1.14.15
-  commands:
-  - sh scripts/build.sh
-  environment:
-    GOARCH: amd64
-    GOOS: linux
+# - name: build
+#   image: golang:1.14.15
+#   commands:
+#   - sh scripts/build.sh
+#   environment:
+#     GOARCH: amd64
+#     GOOS: linux
 
-- name: publish
-  image: plugins/docker:18
-  settings:
-    auto_tag: true
-    auto_tag_suffix: linux-amd64
-    dockerfile: docker/Dockerfile.server.linux.amd64
-    repo: huangxiaofenglogin/drone
-    username:
-      from_secret: docker_username
-    password:
-      from_secret: docker_password
-  when:
-    event:
-    - push
-    - tag
+# - name: publish
+#   image: plugins/docker:18
+#   settings:
+#     auto_tag: true
+#     auto_tag_suffix: linux-amd64
+#     dockerfile: docker/Dockerfile.server.linux.amd64
+#     repo: huangxiaofenglogin/drone
+#     username:
+#       from_secret: docker_username
+#     password:
+#       from_secret: docker_password
+#   when:
+#     event:
+#     - push
+#     - tag
 
 ---
 kind: pipeline
@@ -74,8 +74,8 @@ trigger:
   - push
   - tag
 
-depends_on:
-- linux-amd64
+# depends_on:
+# - linux-amd64
 
 ---
 kind: pipeline
@@ -112,8 +112,8 @@ trigger:
   - push
   - tag
 
-depends_on:
-- linux-amd64
+# depends_on:
+# - linux-amd64
 
 ---
 kind: pipeline
